Code cleanup. Remove commons-codec dependency.